// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-date-interval-field Renders \`c-date-interval-field\` with custom props 1`] = `
<div
  class="c-date-interval c-date-interval--column"
>
  <c-date-picker-field-stub
    allowed-dates="() => {}"
    disabled="true"
    hide-details=""
    label="From"
    value="today-1d"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      calendar_today
    </i>
  </c-date-picker-field-stub>
  <c-date-picker-field-stub
    allowed-dates="() => {}"
    content-class="[object Object]"
    disabled="true"
    hide-details=""
    label="To"
    value="today"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      calendar_today
    </i>
  </c-date-picker-field-stub>
</div>
`;

exports[`c-date-interval-field Renders \`c-date-interval-field\` with default props 1`] = `
<div
  class="c-date-interval"
>
  <c-date-picker-field-stub
    hide-details=""
    label="From"
    value="now-12h"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      calendar_today
    </i>
  </c-date-picker-field-stub>
  <c-date-picker-field-stub
    content-class="[object Object]"
    hide-details=""
    label="To"
    value="now"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      calendar_today
    </i>
  </c-date-picker-field-stub>
</div>
`;
